[package]
name = "snafu_generic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = [ "std" ]
std = [ "snafu/std" ]

[dependencies]
libc-print = "0.1.19"

[dependencies.snafu]
# version="^0.7"
path="../../../Projects/snafu"
default-features=false
features=["backtraces", "backtraces-impl-backtrace-crate"]
